# DOC_QUERY

./: README.md
BACKEND/: .env.example  docker-compose.yml  main.py  pyproject.toml  writeup.md
BACKEND/src/: server.py
BACKEND/src/controllers/: auth.py  chat.py
BACKEND/src/middleware/: auth.py
BACKEND/src/models/sql/: up.sql
BACKEND/src/repositories/: chat.py  file_metadata.py  messages.py  users.py
BACKEND/src/services/: auth_service.py  chat_service.py  embedding_service.py  llm_graph_service.py  llm_service.py
FRONTEND/: package-lock.json  package.json  vite.config.ts
FRONTEND/src/: App.tsx
FRONTEND/src/components/: Button.tsx  Input.tsx  MainLayout.tsx  NewChatModal.tsx  ProtectedRoute.tsx
FRONTEND/src/core/types/: index.ts
FRONTEND/src/hooks/: useAuth.ts  useChat.ts
FRONTEND/src/infrastructure/api/: axiosClient.ts
FRONTEND/src/pages/: ChatView.tsx  Dashboard.tsx  Login.tsx  Register.tsx
FRONTEND/src/services/: authService.ts  chatService.ts
